...
    "password": "Пароль",
    "phoneNumber": "Номер телефона",
    "gender": "Пол",
    "addExpense": "Добавить расход",
    "achievements": "Достижения",
    "subscriptions": "Подписки",
    "settings": "Настройки",
    "automationsRules": "Правила автоматизации",
    "profile": "Профиль",
    "subscription": "Подписка",
    "userInformation": "Информация о пользователе",
    "finance": "Финансы",
    "financeDescriptionPage": "Описание страницы финансов",
...
